FILE(GLOB SRC *.cpp *.h)
FILE(GLOB OSRC */*.cpp */*.h */*/*.cpp */*/*.h)

include_directories(${SDL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR_ft2build} ${FREETYPE_INCLUDE_DIR_freetype2}
${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${IL_INCLUDE_DIR} ${LUA_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../)

add_executable(${APPNAME} ${SRC} ${OSRC})

target_link_libraries(${APPNAME} ${OPENGL_LIBRARY} ${IL_LIBRARIES}
	${ILU_LIBRARY} ${ILUT_LIBRARY} ${FREETYPE_LIBRARY} ${GLEW_LIBRARY}
	${LUA_LIBRARY} ${Boost_LIBRARY_DIRS} ${SDL_LIBRARY} SDLmain )
